# pranav_mlops

./: README.md
Notebooks/: Pipeline.ipynb
project-x/: .gitignore  Makefile  README.md  data.dvc  pyproject.toml
project-x/docs/: mkdocs.yml
project-x/docs/docs/: index.md
